--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,7 @@
     font-size: 3em;
     font-weight: 900;
     font-family: Arial, Helvetica, sans-serif;
-    color: blueviolet;
+    color: rgb(0, 99, 12);
     margin: 10px;
 }
 
@@ -42,6 +42,68 @@ hr {
     border-radius: 16px;
 }
 
+.bloco1SemAltura {
+    background-color: rgb(151, 151, 151);
+   
+    width: 150px;
+    text-align: center;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 16px;
+}
+
+
+.bloco2SemAltura {
+    background-color: rgb(69, 69, 69);
+   
+    width: 150px;
+    text-align: center;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 16px;
+}
+
+.bloco3SemAltura {
+    background-color: rgb(0, 0, 0);
+   
+    width: 150px;
+    text-align: center;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 16px;
+}
+
+.bloco1FontesDiferentes {
+    background-color: rgb(151, 151, 151);
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 16px;
+}
+
+.bloco2FontesDiferentes {
+    background-color: rgb(69, 69, 69);
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    font-size: 60px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 16px;
+}
+
+.bloco3FontesDiferentes {
+    background-color: rgb(0, 0, 0);
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    font-size: 90px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 16px;
+}
+
+
 .container-row {
     display: flex;
     flex-direction: row;
@@ -65,9 +127,9 @@ hr {
     padding: 16px;
     height: 500px;
 }
-.container-row-reverse {
+.container-columnreverse {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column-reverse;
     background-color: darkslategrey;
     padding: 16px;
     height: 500px;
@@ -77,13 +139,172 @@ hr {
     font-size: 2em;
     font-weight: 500px;
     font-family: Arial, Helvetica, sans-serif;
-    color: azure;
+    color: rgb(12, 56, 56);
     padding: 20px;
 }
-.velorDaPropriedade{
+
+.nomeDaPropriedadeShorthand{
+    font-size: 2em;
+    font-weight: 500px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(31, 186, 186);
+    padding: 20px;
+}
+.valorDaPropriedade{
     font-size: 5pm ;
 font-weight: 400px;
 font-family: Arial, Helvetica, sans-serif;
-color: aqua;
+color: rgb(0, 0, 0);
 padding: 20px; ;
 }
+
+.justify-content-center {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+}
+
+.justify-content-flex-start {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.justify-content-flex-end {
+    display: flex;
+    flex-direction: row;
+    justify-content:flex-end;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.spaceBetween {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.spaceAround {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.spaceEvenly {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.containerAlignItemsCenter {
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items: center;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.containerAlignItemsflexStart{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:flex-start;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.containerAlignItemsflexEnd{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:flex-end;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.containerAlignItemsStretch{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:stretch;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.containerAlignItemsBaseline{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:baseline;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.containerflexWrapNowrap{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:center;
+    flex-wrap: nowrap;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.containerflexWrapWrap{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items:center;
+    flex-wrap:wrap;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.containerflexWrapReverse{
+    display: flex;
+    flex-direction:row;
+    justify-content:center;
+    align-items:center;
+    flex-wrap:wrap-reverse;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+.containerflexFlowRowRap{
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    flex-flow: row nowrap;
+    background-color: darkslategrey;
+    padding: 16px;
+    height: 500px;
+} 
+
+
+
+
