--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -305,6 +305,105 @@ padding: 20px; ;
     height: 500px;
 } 
 
+.containerAlingContentCenter{
+ display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap;
+align-content: center;
+background-color: darkslategrey;
+padding: 16px;
+height: 500px;
+}
 
+.containerAlingContentFlexStart{
+    display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   flex-wrap: wrap;
+   align-content:flex-start;
+   background-color: darkslategrey;
+   padding: 16px;
+   height: 500px;
+   }
 
+   .containerAlingContentFlexEnd{
+    display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   flex-wrap: wrap;
+   align-content:flex-end;
+   background-color: darkslategrey;
+   padding: 16px;
+   height: 500px;
+   }
+
+   .containerAlingContentspaceBetween{
+    display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   flex-wrap: wrap;
+   align-content:space-between;
+   background-color: darkslategrey;
+   padding: 16px;
+   height: 500px;
+   }
+
+   .containerAlingContentspaceAround{
+    display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   flex-wrap: wrap;
+   align-content:space-around;
+   background-color: darkslategrey;
+   padding: 16px;
+   height: 500px;
+   }
+
+   .containerAlingContentspaceEvenly{
+    display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   flex-wrap: wrap;
+   align-content:space-evenly;
+   background-color: darkslategrey;
+   padding: 16px;
+   height: 500px;
+   }
+
+   .menu {
+    background-color:darkslategrey ;
+justify-content: center;
+align-items: center;
+display: flex;
+height: 80px;
+flex-direction: row;
+font-family: Arial, sans-serif;
+   }
+
+   .menu {
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
+   }
+
+   .menu a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 10px 15px;
+    border-radius: 5px; 
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.menu a:hover {
+    background-color: #ffffff; 
+    color: rgb(0, 0, 0); 
+}
 
